# mudup

./: Cargo.toml  README.md
.github/workflows/: mudup-build.yml  mudup-release.yml
script/install/: mudup-init.sh
src/: archive.rs  checksum.rs  cli.rs  config.rs  libs.rs  main.rs  remote.rs  self_update.rs  toolchain.rs  util.rs
