[package]
name = "mudup"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mudup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.27.0"
indicatif = "0.18.4"
sha2 = "0.11.0"
tokio = { version = "1.47.1", features = ["full"] }
